clusters/talos-cluster/vela/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vela
  namespace: vela
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vela
  template:
    metadata:
      labels:
        app: vela
    spec:
      runtimeClassName: nvidia
      containers:
        - name: vela
          image: zot.maix.ovh/vela:v0.0.43@sha256:7ea5e560b67647c78dec7e6a9141edc8e177f3a91560a60ef553ada935bc0b47
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
              nvidia.com/gpu: "1"
            limits:
              memory: "4Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: videos
              mountPath: /library
              subPath: royossai/Private/Videos
            - name: videos
              mountPath: /library-hypno-video
              subPath: royossai/Private/Hypno/video
            - name: videos
              mountPath: /library-audio
              subPath: royossai/Private/Vocals
            - name: videos
              mountPath: /library-hypno-audio
              subPath: royossai/Private/Hypno/audio
            - name: database
              mountPath: /data
            - name: streaming
              mountPath: /data/assets
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: videos
          persistentVolumeClaim:
            claimName: vela-data
        - name: database
          persistentVolumeClaim:
            claimName: vela-db
        - name: streaming
          persistentVolumeClaim:
            claimName: vela-streaming
        - name: tmp
          emptyDir: {}
      imagePullSecrets:
        - name: zot-pull-secret
