clusters/talos-cluster/vela/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vela
  namespace: vela
spec:
  selector:
    app: vela
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
